# SDL-Example

./: hello.djinni  run_djinni.sh  settings.gradle
app/: build.gradle
app/jni/: Application.mk
app/jni/SDL/: include  src
app/jni/src/: Android.mk-e
app/src/main/: AndroidManifest.xml  AndroidManifest.xml-e
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/java/org/libsdl/testgles/: testglesActivity.java
common_sdl/java/org/libsdl/testgles/: testglesActivity.java
generated-src/cpp/: Hello.hpp
generated-src/jni/: NativeHello.cpp  NativeHello.hpp
generated-src/objc/: HelloWorld-Bridging-Header.h  NVHello.h
generated-src/objcpp/: NVHello+Private.h  NVHello+Private.mm
my_sdl_app/: build.gradle
my_sdl_app/src/androidTest/java/org/netvirta/my_sdl_app/: ExampleInstrumentedTest.kt
my_sdl_app/src/main/: AndroidManifest.xml
my_sdl_app/src/main/java/org/netvirta/my_sdl_app/: MainActivity.kt
my_sdl_app/src/main/res/values/: strings.xml
my_sdl_app/src/test/java/org/netvirta/my_sdl_app/: ExampleUnitTest.kt
mylibrary/: CMakeLists.txt  build.gradle
mylibrary/src/androidTest/java/org/netvirta/mylibrary/: ExampleInstrumentedTest.kt
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/cpp/: helloImpl.cpp  helloImpl.hpp
mylibrary/src/main/cpp/djinni/: djinni_main.cpp
mylibrary/src/test/java/org/netvirta/mylibrary/: ExampleUnitTest.kt
